# geek-urlshortener

./: .env  Cargo.toml  README.md  cliff.toml  test.rest  urlshorten.db
examples/: mysql.rs  sqlite.rs
src/: lib.rs  main.rs
src/error/: mod.rs
src/handler/: mod.rs
src/model/: mod.rs
src/service/: mod.rs
