[package]
name = "geek-utlshortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
sqlx = { version = "0.8.0", features = ["sqlite", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }
